--- a/.env
+++ b/.env
@@ -35,8 +35,8 @@ SMTP_PORT=587
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=app
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=changethis
+POSTGRES_USER=app
+POSTGRES_PASSWORD=tian123456
 
 SENTRY_DSN=
 
