PicKitchen: emoji flow + points + RevenueCat

--- a/.env
+++ b/.env
@@ -37,3 +37,25 @@ SENTRY_DSN=
 
 # Configure these with your own Docker registry images
 DOCKER_IMAGE_BACKEND=backend
+
+# Snowflake
+SNOWFLAKE_NODE_ID=0
+
+# Redis (local dev)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+
+# Aliyun OSS (client direct upload; replace with real values for production)
+OSS_ENDPOINT=oss-cn-hangzhou.aliyuncs.com
+OSS_BUCKET=pickitchen-dev
+OSS_ACCESS_KEY_ID=test_access_key_id
+OSS_ACCESS_KEY_SECRET=test_access_key_secret
+OSS_DIR_PREFIX=uploads
+OSS_UPLOAD_EXPIRE_SECONDS=60
+
+# Aliyun Emoji API
+ALIYUN_EMOJI_MOCK=true
+
+# RevenueCat webhook auth (set this in RevenueCat dashboard too)
+REVENUECAT_WEBHOOK_SECRET=test_webhook_secret
