--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -3,6 +3,7 @@ name: Test Backend
 on:
   push:
     branches:
+      - main
       - master
   pull_request:
     types:
@@ -25,7 +26,7 @@ jobs:
           version: "0.4.15"
           enable-cache: true
       - run: docker compose down -v --remove-orphans
-      - run: docker compose up -d db mailcatcher
+      - run: docker compose up -d db redis mailcatcher
       - name: Migrate DB
         run: uv run bash scripts/prestart.sh
         working-directory: backend
