--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -50,6 +50,11 @@ services:
     ports:
       - "5433:5432"
 
+  redis:
+    restart: "no"
+    ports:
+      - "6379:6379"
+
   adminer:
     restart: "no"
     ports:
