--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,11 @@ dependencies = [
     "pydantic-settings<3.0.0,>=2.2.1",
     "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
     "pyjwt<3.0.0,>=2.8.0",
+    # PicKitchen dependencies
+    "nacos-sdk-python>=2.0.0,<3.0.0",
+    "redis>=5.0.0,<6.0.0",
+    "oss2>=2.18.0,<3.0.0",
+    "apscheduler>=3.10.0,<4.0.0",
 ]
 
 [tool.uv]
