ci: 修复 CI 失败问题
## 修复内容

1. **修复 pre-commit hooks**
   - 将 ruff hooks 从 `language: unsupported` 改为 `language: system`
   - 添加 `pass_filenames: false` 避免文件名传递问题
   - 使用 `bash -c` 确保在正确目录执行命令
   - 移除 `--exit-non-zero-on-format` 标志(ruff format 不支持)

2. **修复 test-backend 工作流**
   - 添加服务就绪检查步骤
   - 使用 `pg_isready` 等待 PostgreSQL 完全启动
   - 使用 `redis-cli ping` 等待 Redis 完全启动
   - 设置 60 秒超时防止无限等待

3. **修复 pre-commit 工作流**
   - 将 `uvx prek` 改为 `uv run prek` 使用已安装的依赖
   - 确保在 backend 目录执行

## 问题原因

- pre-commit: ruff 命令在 CI 环境中不在 PATH
- test-backend: 数据库启动后立即连接,未等待服务就绪

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -53,7 +53,7 @@ jobs:
         working-directory: backend
       - name: Run prek - pre-commit
         id: precommit
-        run: uvx prek run --from-ref origin/${GITHUB_BASE_REF} --to-ref HEAD --show-diff-on-failure
+        run: uv run prek run --from-ref origin/${GITHUB_BASE_REF} --to-ref HEAD --show-diff-on-failure
         continue-on-error: true
         working-directory: backend
       - name: Commit and push changes
