--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,14 +20,16 @@ repos:
     hooks:
       - id: local-ruff-check
         name: ruff check
-        entry: uv run ruff check --force-exclude --fix --exit-non-zero-on-fix
+        entry: bash -c 'cd backend && uv run ruff check --force-exclude --fix --exit-non-zero-on-fix'
         require_serial: true
-        language: unsupported
+        language: system
         types: [python]
+        pass_filenames: false
 
       - id: local-ruff-format
         name: ruff format
-        entry: uv run ruff format --force-exclude --exit-non-zero-on-format
+        entry: bash -c 'cd backend && uv run ruff format --force-exclude'
         require_serial: true
-        language: unsupported
+        language: system
         types: [python]
+        pass_filenames: false
