Fix CI workflows and update locks

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -21,3 +21,9 @@ internal:
       - all-globs-to-all-files:
         - '!./**/*.md'
         - '!backend/**'
+
+feature:
+  - all:
+    - changed-files:
+      - any-glob-to-any-file:
+        - backend/**
