--- a/.env
+++ b/.env
@@ -30,8 +30,8 @@ SMTP_PORT=587
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=app
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=changethis
+POSTGRES_USER=shanquan
+POSTGRES_PASSWORD=
 
 SENTRY_DSN=
 
