refactor: 移除未使用的 FIRST_SUPERUSER 配置并重组文档结构
- 删除未使用的 FIRST_SUPERUSER 和 FIRST_SUPERUSER_PASSWORD 配置
  - 从 .env 中移除
  - 从 docker-compose.yml 中移除环境变量引用
  - 从 GitHub Actions 工作流中移除相关配置
- 重组文档结构
  - 将部署文档移动到 docs/deployment/ 目录
  - 将开发文档移动到 docs/development/ 目录
  - 将 release-notes.md 移动到 docs/ 目录
- 清理不需要的文档文件（REVIEW_ORDER.md, SECURITY.md, next_step.md 等）

--- a/.env
+++ b/.env
@@ -1,21 +1,19 @@
 # Domain
 # This would be set to the production domain with an env var on deployment
 # used by Traefik to transmit traffic and aqcuire TLS certificates
-DOMAIN=localhost
+DOMAIN=seboadx.com 
 # To test the local Traefik config
 # DOMAIN=localhost.tiangolo.com
 
 # Environment: local, staging, production
 ENVIRONMENT=local
 
-PROJECT_NAME="Backend FastAPI Project"
-STACK_NAME=backend-fastapi-project
+PROJECT_NAME="AIPicAPP"
+STACK_NAME=ai-pic-app
 
 # Backend
 BACKEND_CORS_ORIGINS="http://localhost,https://localhost,http://localhost.tiangolo.com"
-SECRET_KEY=changethis
-FIRST_SUPERUSER=admin@example.com
-FIRST_SUPERUSER_PASSWORD=changethis
+SECRET_KEY=kvhzQRtDpokErUm1ZLpx
 
 # Emails
 SMTP_HOST=
@@ -30,8 +28,8 @@ SMTP_PORT=587
 POSTGRES_SERVER=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=app
-POSTGRES_USER=shanquan
-POSTGRES_PASSWORD=
+POSTGRES_USER=ai_pic_admin
+POSTGRES_PASSWORD=kvhzQRtDpokErUm1ZLpx
 
 SENTRY_DSN=
 
