--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ SMTP_SSL=False
 SMTP_PORT=587
 
 # Postgres
-POSTGRES_SERVER=localhost
+POSTGRES_SERVER=host.docker.internal
 POSTGRES_PORT=5432
 POSTGRES_DB=app
 POSTGRES_USER=ai_pic_admin
@@ -40,7 +40,7 @@ DOCKER_IMAGE_BACKEND=backend
 SNOWFLAKE_NODE_ID=0
 
 # Redis (local dev)
-REDIS_HOST=localhost
+REDIS_HOST=host.docker.internal
 REDIS_PORT=6379
 REDIS_DB=0
 
