--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -9,9 +9,7 @@ jobs:
   deploy:
     # Do not deploy in the main repository, only in user projects
     if: github.repository_owner != 'fastapi'
-    runs-on:
-      - self-hosted
-      - production
+    runs-on: ubuntu-latest
     env:
       ENVIRONMENT: production
       DOMAIN: ${{ secrets.DOMAIN_PRODUCTION }}
