chore(ci): 部署工作流适配 GitHub 托管 runner
- 为 env 提供默认值（secrets 未配置时仍可跑通），精简为必要变量
- 步骤改为 Compose config 校验 + build，移除 up -d（托管 runner 仅做构建验证）

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -12,17 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ENVIRONMENT: staging
-      DOMAIN: ${{ secrets.DOMAIN_STAGING }}
-      STACK_NAME: ${{ secrets.STACK_NAME_STAGING }}
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      SMTP_HOST: ${{ secrets.SMTP_HOST }}
-      SMTP_USER: ${{ secrets.SMTP_USER }}
-      SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-      EMAILS_FROM_EMAIL: ${{ secrets.EMAILS_FROM_EMAIL }}
-      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-      SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
+      # Provide safe defaults so GitHub-hosted runners don't fail when secrets aren't set.
+      DOMAIN: ${{ secrets.DOMAIN_STAGING || 'example.com' }}
+      STACK_NAME: ${{ secrets.STACK_NAME_STAGING || 'ai-pic-staging' }}
+      DOCKER_IMAGE_BACKEND: ${{ secrets.DOCKER_IMAGE_BACKEND || 'backend' }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY || 'dev-secret' }}
+      POSTGRES_USER: ${{ secrets.POSTGRES_USER || 'postgres' }}
+      POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD || 'postgres' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v6
-      - run: docker compose -f docker-compose.yml --project-name ${{ secrets.STACK_NAME_STAGING }} build
-      - run: docker compose -f docker-compose.yml --project-name ${{ secrets.STACK_NAME_STAGING }} up -d
+      - name: Compose config
+        run: docker compose -f docker-compose.yml config > /dev/null
+      - name: Build images
+        run: docker compose -f docker-compose.yml build
